--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "node_modules/flashDB"]
 	path = node_modules/flashDB
 	url = git://github.com/yorkie/FlashDB.git
+[submodule "node_modules/express-model"]
+	path = node_modules/express-model
+	url = git://github.com/yorkie/express-model.git
