--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ikanbao.fm",
   "version": "0.0.1",
-  "private": true,
+  "description": "电子报在线阅读第三方平台 based on Express.js",
   "dependencies": {
     "combo": "0.2.0",
     "everyauth": "0.2.34",
